--- a/style.css
+++ b/style.css
@@ -1,11 +1,11 @@
 /*
-Theme Name: Jennifer ReednBlank Theme
+Theme Name: Jennifer Reed Blog Theme
 Theme URI: 
 Author: Jennifer Reed
 Description: Blank theme for WIE course
 Version: 0.1
 License: Open
-Text Domain: jennifer_reed_blank_template
+Text Domain: jennifer_reed_blog_template
 */
 
 @import url("stylesheets/normalize.css");
