--- a/style.css
+++ b/style.css
@@ -18,7 +18,7 @@ html, body{
 }
 
 h1, h2, h3, h4, h5, h6 {
-    color: #999999;
+    color: #000000;
     font-weight: 700;
 }
 
@@ -67,4 +67,21 @@ a{
 }
 .blank-menu-header ul li a:hover {
     color: #cccccc;
+}
+
+/*--HEADER--*/
+h1.site-title {
+    font-family: 'El Messiri', sans-serif;
+    font-size: 2.5rem;
+    padding: 0;
+    margin: 0;
+}
+
+h1.site-title a {
+    color: #000000;
+}
+
+h2.sub-title {
+    font-size: 1.75rem;
+    font-weight: 500;
 }
