Fix syntax issue on single page. Update Sidebar

--- a/style.css
+++ b/style.css
@@ -2,10 +2,10 @@
 Theme Name: Jennifer Reed Blog Theme
 Theme URI: 
 Author: Jennifer Reed
-Description: Blank theme for WIE course
+Description: Bl0g theme for WIE course
 Version: 0.1
 License: Open
-Text Domain: jennifer_reed_blog_template
+Text Domain: jennifer_reed_blog_site
 */
 
 @import url("stylesheets/normalize.css");
