--- a/style.css
+++ b/style.css
@@ -40,9 +40,37 @@ h5 {
     font-size: 1.0rem;    
 }
 
-a{
+a {
     font-weight: 700;
     text-decoration: none;
+    color: #000000;
+}
+
+a:hover {
+    text-decoration: none;
+    color: #ffffff;
+}
+
+/*--HEADER--*/
+header {
+    background-color: #3FBAC2;
+    padding: 0 5px;
+}
+
+h1.site-title {
+    font-size: 2.5rem;
+    padding: 0;
+    margin: 20px 0 0;
+}
+
+h1.site-title a {
+    color: #000000;
+}
+
+h2.sub-title {
+    font-size: 1.75rem;
+    font-weight: 500;
+    margin-bottom: 0;
 }
 
 /*--- Menu --- */
@@ -76,10 +104,6 @@ a{
     color: #ffffff;
 }
 
-header {
-    background-color: #3FBAC2;
-}
-
 #fb {
 	background-image: url(images/fb.png);
 	background-repeat: no-repeat;
@@ -107,36 +131,44 @@ header {
 	float: right;
 }
 
-/*--HEADER--*/
-h1.site-title {
-    font-size: 2.5rem;
-    padding: 0;
-    margin: 20px 0 0;
-}
-
-h1.site-title a {
-    color: #000000;
-}
-
-h2.sub-title {
-    font-size: 1.75rem;
-    font-weight: 500;
-    margin-bottom: 0;
-}
 
 /*--INDEX--*/
+.primary {
+    margin: .75em;
+    padding: 5px;
+    background-color: #ffffff;
+    box-shadow: 5px 5px 3px #888888;
+}
+
 .index-thumbnail {
     margin-left: 2px;
 }
 .excerpt {
-    margin-left: 5px;
+    margin-left: 1em;
 }
-.row.post {
+.primary h3 {
+    margin-bottom: 5px;
+}
+
+.primary a:hover {
+    color: #756C93;
+}
+
+.primary.cont a{
+    color: #756C93;
+}
+
+.secondary{
+    margin: .75em;
+    padding: 5px;
     background-color: #ffffff;
+    box-shadow: 5px 5px 3px #888888;
 }
 
 /*--SIDEBAR--*/
 .rt_side {
+    margin: 1em;
+    padding: 5px;
     background-color: #756C93;
 }
 
