Add date to posts

--- a/style.css
+++ b/style.css
@@ -166,10 +166,12 @@ h2.sub-title {
 }
 
 /*--SIDEBAR--*/
-.rt_side {
+.widget-index-sidebar {
     margin: 1em;
     padding: 5px;
     background-color: #756C93;
+    box-shadow: 5px 5px 3px #888888;
+    justify-content: center;
 }
 
 /*--FOOTER--*/
