--- a/style.css
+++ b/style.css
@@ -31,13 +31,15 @@ h2 {
     font-size: 2.5rem;
 }
 h3 {
-    font-size: 2.0rem;    
+    font-size: 2.0rem;   
+    margin-bottom: .5rem;
 }
 h4 {
     font-size: 1.5rem;    
 }
 h5 {
-    font-size: 1.0rem;    
+    font-size: 1.0rem; 
+    margin-bottom: .5rem;
 }
 
 a {
@@ -54,7 +56,7 @@ a:hover {
 /*--HEADER--*/
 header {
     background-color: #3FBAC2;
-    padding: 0 5px;
+    padding: 0 10px;
 }
 
 h1.site-title {
@@ -146,6 +148,7 @@ h2.sub-title {
 .excerpt {
     margin-left: 1em;
 }
+
 .primary h3 {
     margin-bottom: 5px;
 }
@@ -154,8 +157,9 @@ h2.sub-title {
     color: #756C93;
 }
 
-.primary.cont a{
+a.continue {
     color: #756C93;
+    padding-left: 70%;
 }
 
 .secondary{
@@ -166,12 +170,19 @@ h2.sub-title {
 }
 
 /*--SIDEBAR--*/
+.three.columns.sidebar {
+    width: 25%;
+}
+.sidebar {
+    margin-left: 5px;
+}
+
 .widget-index-sidebar {
     margin: 1em;
     padding: 5px;
     background-color: #756C93;
     box-shadow: 5px 5px 3px #888888;
-    justify-content: center;
+
 }
 
 /*--FOOTER--*/
